--- a/APPTest/src/main/res/layout/activity_main.xml
+++ b/APPTest/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
-        android:text="fsfddsfsdf" />
+        android:text="这是一个测试" />
 
     <Button
         android:id="@+id/doActionWithLibProvider"
@@ -35,6 +35,15 @@
         android:layout_marginRight="20dp"
         android:text="使用自定义Provider安装" />
 
+
+    <Button
+        android:id="@+id/speak"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="20dp"
+        android:text="播放语音" />
 
     <TextView
         android:id="@+id/testResult"
