--- a/LibDialog/src/main/res/values/com_bihe0832.common_base_dialog_res.xml
+++ b/LibDialog/src/main/res/values/com_bihe0832.common_base_dialog_res.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="BaseDialog" parent="@android:style/Theme.Dialog">
-        <item name="android:windowMinWidthMajor">65%</item>
-        <item name="android:windowMinWidthMinor">95%</item>
         <!--背景颜色及和透明程度-->
-        <item name="android:windowBackground">@drawable/com_bihe0832_commonm_dialog_bg</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:background">@android:color/transparent</item>
         <!--是否去除标题 -->
         <item name="android:windowNoTitle">true</item>
