--- a/LibDialog/src/main/res/values/com_bihe0832.common_dialog_res.xml
+++ b/LibDialog/src/main/res/values/com_bihe0832.common_dialog_res.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="CommonDialog" parent="BaseDialog" />
+
+    <style name="CommonDialog" parent="BaseDialog">
+        <item name="android:windowMinWidthMajor">65%</item>
+        <item name="android:windowMinWidthMinor">90%</item>
+    </style>
 </resources>
