--- a/LibDialog/src/main/res/values/com_bihe0832.common_process_res.xml
+++ b/LibDialog/src/main/res/values/com_bihe0832.common_process_res.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="CommonProgressBarStyle" parent="BaseDialog">
+    <style name="CommonProgressDialogStyle" parent="CommonDialog">
+    </style>
+
+    <style name="CommonProgressBarStyle">
         <item name="android:maxHeight">10dp</item>
         <item name="android:minHeight">5dp</item>
         <item name="android:indeterminateOnly">false</item>
         <item name="android:indeterminateDrawable">@drawable/simple_progress_bar_bg</item>
         <item name="android:progressDrawable">@drawable/common_progress_bar_bg</item>
-    </style>
-
-    <style name="CommonProgressDialogStyle" parent="BaseDialog">
     </style>
 
     <color name="process_color">#FDCE5A</color>
