--- a/APPTest/src/main/res/layout/activity_main.xml
+++ b/APPTest/src/main/res/layout/activity_main.xml
@@ -50,6 +50,15 @@
             android:layout_marginRight="20dp"
             android:text="播放语音" />
 
+        <Button
+            android:id="@+id/httptest"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="20dp"
+            android:text="HTTP-Demo" />
+
         <TextView
             android:id="@+id/testResult"
             android:layout_width="fill_parent"
