--- a/APPTest/src/main/res/layout/fragment_test_tts.xml
+++ b/APPTest/src/main/res/layout/fragment_test_tts.xml
@@ -1,8 +1,9 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:orientation="vertical">
+
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
@@ -76,8 +77,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
             android:layout_marginTop="30dp"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <Button
@@ -130,6 +131,7 @@
             android:lineHeight="30dp"
             android:text="备注：连续点击下方按钮可以测试各种语音效果："
             android:textSize="16dp" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -179,4 +181,4 @@
 
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</ScrollView>
