--- a/Framework/src/main/res/layout/common_activity_framelayout.xml
+++ b/Framework/src/main/res/layout/common_activity_framelayout.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#143242"
     android:fitsSystemWindows="true"
     android:gravity="center"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -17,7 +17,6 @@
         android:id="@+id/common_fragment_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:scrollbars="none" />
-
-
 </LinearLayout>
