--- a/CommonWebview/src/main/res/layout/common_fragment_webview.xml
+++ b/CommonWebview/src/main/res/layout/common_fragment_webview.xml
@@ -41,7 +41,7 @@
         android:background="@color/transparent"
         android:paddingLeft="18dp"
         android:paddingRight="16dp"
-        android:visibility="visible"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_webview_progressbar">
 
