--- a/APPTest/src/main/res/layout/card_demo_section_content.xml
+++ b/APPTest/src/main/res/layout/card_demo_section_content.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:textColor="@android:color/white"
+        android:textColor="@android:color/holo_purple"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:text="demo_text"
