通用列表优化，添加通用测试activity

--- a/Framework/src/main/res/layout/common_activity_framelayout.xml
+++ b/Framework/src/main/res/layout/common_activity_framelayout.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:gravity="center"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/common_activity_bg"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -17,6 +17,6 @@
         android:id="@+id/common_fragment_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/common_content_bg"
         android:scrollbars="none" />
 </LinearLayout>
