--- a/Framework/src/main/res/layout/common_activity_list.xml
+++ b/Framework/src/main/res/layout/common_activity_list.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/common_activity_bg"
     android:orientation="vertical">
 
     <android.support.v7.widget.Toolbar
@@ -13,6 +14,7 @@
 
     <com.bihe0832.android.lib.ui.recycleview.ext.MyEasyRefreshLayout
         android:id="@+id/common_activity_list_refresh"
+        android:background="@color/common_content_bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
