--- a/Framework/src/main/res/layout/common_fragment_list.xml
+++ b/Framework/src/main/res/layout/common_fragment_list.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/common_content_bg"
     android:orientation="vertical">
 
     <com.bihe0832.android.lib.ui.recycleview.ext.MyEasyRefreshLayout
