--- a/Framework/src/main/res/layout/common_fragment_with_bottom.xml
+++ b/Framework/src/main/res/layout/common_fragment_with_bottom.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/common_content_bg"
     android:layout_height="match_parent">
 
     <FrameLayout
