基础框架完善，如更新等

--- a/Application/src/main/res/layout/card_setting.xml
+++ b/Application/src/main/res/layout/card_setting.xml
@@ -49,9 +49,9 @@
             android:id="@+id/settings_tips"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#0EFFFF"
+            android:textColor="@color/colorAccent"
             android:textSize="14dp"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/settings_title"
             app:layout_constraintEnd_toStartOf="@+id/settings_is_new"
             app:layout_constraintTop_toTopOf="@+id/settings_title"
