--- a/Application/src/main/res/values/about_res.xml
+++ b/Application/src/main/res/values/about_res.xml
@@ -3,6 +3,7 @@
     <string name="about">关于我们</string>
     <string name="feedback_qq">2217661422</string>
     <string name="feedback_url">https://support.qq.com/product/290858</string>
+    <string name="update_url"></string>
 
     <string name="wechat_id">zixie_shi</string>
     <string name="wechat_name">子勰随笔</string>
