--- a/LibDialog/src/main/res/layout/com_bihe0832_commonm_dialog_layout.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_commonm_dialog_layout.xml
@@ -1,153 +1,153 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/dialog_layout"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/com_bihe0832_commonm_dialog_bg">
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/dialog_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/com_bihe0832_commonm_dialog_bg">
 
     <TextView
-        android:id="@+id/title"
-        android:layout_width="0dp"
-        app:layout_constrainedWidth="true"
-        android:layout_height="wrap_content"
-        android:textColor="@color/dialog_title"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:visibility="visible"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:gravity="center"
-        android:layout_marginTop="24dp"
-        tools:text="系统消息" />
+            android:id="@+id/title"
+            android:layout_width="0dp"
+            app:layout_constrainedWidth="true"
+            android:layout_height="wrap_content"
+            android:textColor="@color/dialog_title"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:visibility="visible"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:gravity="center"
+            android:layout_marginTop="24dp"
+            tools:text="系统消息" />
 
     <TextView
-        android:id="@+id/content"
-        android:layout_width="0dp"
-        app:layout_constrainedWidth="true"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginRight="24dp"
-        android:lineSpacingMultiplier="1.75"
-        android:scrollbars = "vertical"
-        android:textSize="14dp"
-        android:textColor="@color/dialog_title"
-        app:layout_constraintTop_toBottomOf="@+id/title"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:text="提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息"
-        />
+            android:id="@+id/content"
+            android:layout_width="0dp"
+            app:layout_constrainedWidth="true"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:lineSpacingMultiplier="1.75"
+            android:scrollbars="vertical"
+            android:textSize="14dp"
+            android:textColor="@color/dialog_title"
+            app:layout_constraintTop_toBottomOf="@+id/title"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            tools:text="提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息提示消息" />
 
     <CheckBox
-        android:id="@+id/nomore_cb"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="10dp"
-        android:gravity="center"
-        android:scaleX="0.8"
-        android:scaleY="0.8"
-        android:text=" 不再提醒我"
-        android:textColor="@android:color/white"
-        android:textSize="15dp"
-        android:visibility="gone"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/content" />
+            android:id="@+id/nomore_cb"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:scaleX="0.8"
+            android:scaleY="0.8"
+            android:text=" 不再提醒我"
+            android:textColor="@android:color/white"
+            android:textSize="15dp"
+            android:visibility="gone"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/content" />
 
     <ImageView
-        android:id="@+id/content_img"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="12dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nomore_cb"
-        tools:src="@mipmap/debug"/>
+            android:id="@+id/content_img"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginRight="12dp"
+            android:scaleType="fitCenter"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/nomore_cb"
+            tools:src="@mipmap/debug" />
+
     <LinearLayout
-        android:id="@+id/content_layout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/content_img"
-        android:orientation="vertical" >
-    </LinearLayout>
+            android:id="@+id/content_layout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/content_img"
+            android:orientation="vertical"></LinearLayout>
 
     <TextView
-        android:id="@+id/feedback"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="10sp"
-        android:layout_marginTop="8dp"
-        android:visibility="visible"
-        android:textColor="@color/dialog_tips"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/content_layout"
-        tools:text="提示消息提示消息提示消息提示消息"/>
+            android:id="@+id/feedback"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="10sp"
+            android:layout_marginTop="8dp"
+            android:visibility="visible"
+            android:textColor="@color/dialog_tips"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/content_layout"
+            tools:text="提示消息提示消息提示消息提示消息" />
 
     <View
-        android:id="@+id/line"
-        android:layout_width="0dp"
-        android:layout_height="2dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/feedback"
-        android:background="@color/dialog_split" />
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/line"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/negtive"
+            android:id="@+id/line"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            android:layout_weight="1"
-            android:background="@null"
-            android:gravity="center"
-            android:singleLine="true"
-            tools:text="前往"
-            android:textColor="@color/dialog_button"
-            android:textSize="16sp" />
-
-        <View
-            android:id="@+id/column_line"
-            android:layout_width="2dp"
-            android:layout_height="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/feedback"
             android:background="@color/dialog_split" />
 
-        <Button
-            android:id="@+id/positive"
+    <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
-            android:paddingTop="16dp"
-            android:paddingBottom="16dp"
-            android:background="@null"
-            android:gravity="center"
-            android:singleLine="true"
-            tools:text="确定"
-            android:textColor="@color/dialog_button"
-            android:textSize="16sp" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/line"
+            android:orientation="horizontal">
+
+        <Button
+                android:id="@+id/negtive"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:gravity="center"
+                android:singleLine="true"
+                tools:text="前往"
+                android:textColor="@color/dialog_button"
+                android:textSize="14dp" />
+
+        <View
+                android:id="@+id/column_line"
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                android:background="@color/dialog_split" />
+
+        <Button
+                android:id="@+id/positive"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:paddingTop="16dp"
+                android:paddingBottom="16dp"
+                android:background="@null"
+                android:gravity="center"
+                android:singleLine="true"
+                android:textStyle="bold"
+                tools:text="确定"
+                android:textColor="@color/dialog_button"
+                android:textSize="14dp" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
