--- a/LibDialog/src/main/res/layout/com_bihe0832_commonm_dialog_layout.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_commonm_dialog_layout.xml
@@ -11,7 +11,7 @@
             android:layout_width="0dp"
             app:layout_constrainedWidth="true"
             android:layout_height="wrap_content"
-            android:textColor="@color/dialog_title"
+            android:textColor="@color/dialog_text"
             android:layout_marginLeft="40dp"
             android:layout_marginRight="40dp"
             android:textSize="18dp"
@@ -35,7 +35,7 @@
             android:lineSpacingMultiplier="1.75"
             android:scrollbars="vertical"
             android:textSize="14dp"
-            android:textColor="@color/dialog_title"
+            android:textColor="@color/dialog_text"
             app:layout_constraintTop_toBottomOf="@+id/title"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -51,7 +51,7 @@
             android:scaleX="0.8"
             android:scaleY="0.8"
             android:text=" 不再提醒我"
-            android:textColor="@android:color/white"
+            android:textColor="@color/dialog_text"
             android:textSize="15dp"
             android:visibility="gone"
             app:layout_constraintLeft_toLeftOf="parent"
