--- a/LibDialog/src/main/res/layout/common_progress_dialog.xml
+++ b/LibDialog/src/main/res/layout/common_progress_dialog.xml
@@ -12,7 +12,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             tools:text="版本更新"
-            android:textColor="@color/dialog_title"
+            android:textColor="@color/dialog_text"
             android:textSize="18dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
