--- a/Application/src/main/res/layout/about_layout.xml
+++ b/Application/src/main/res/layout/about_layout.xml
@@ -5,14 +5,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/common_activity_bg"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/common_content_bg">
+        android:layout_height="match_parent">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/app_about_toolbar"
