--- a/Framework/src/main/res/values/activity_theme.xml
+++ b/Framework/src/main/res/values/activity_theme.xml
@@ -52,7 +52,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:windowBackground">@color/colorPrimaryDark</item>
+        <item name="android:windowBackground">@color/windowBackground</item>
     </style>
 
     <!--    主要用于闪屏 -->
