--- a/APPTest/src/main/res/layout/fragment_test_basic.xml
+++ b/APPTest/src/main/res/layout/fragment_test_basic.xml
@@ -1,26 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:padding="16dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="16dp">
 
-        <ImageView
+            <ImageView
                 android:id="@+id/test_basic_content"
                 android:layout_width="match_parent"
-                android:layout_height="500dp"
+                android:layout_height="200dp"
                 android:scaleType="centerInside"
                 tools:src="@mipmap/share_qq" />
 
-        <Button
+            <Button
                 android:id="@+id/test_basic_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -29,7 +33,7 @@
                 android:textSize="16dp" />
 
 
-        <Button
+            <Button
                 android:id="@+id/test_basic_button_local_1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -37,7 +41,7 @@
                 android:text="加载网络PNG"
                 android:textSize="16dp" />
 
-        <Button
+            <Button
                 android:id="@+id/test_basic_button_local_2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -45,7 +49,7 @@
                 android:text="加载本地图片2"
                 android:textSize="16dp" />
 
-    </LinearLayout>
+        </LinearLayout>
 
-
+    </ScrollView>
 </FrameLayout>
