闪屏、权限、定时任务优化、dialog优化

--- a/Framework/src/main/res/values/common_string.xml
+++ b/Framework/src/main/res/values/common_string.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">AndroidAPPFactofy</string>
-    <string name="app_desc">来自子勰的开发组件</string>
+    <string name="app_desc">安卓开发组件 - 子勰</string>
     <string name="router_schema">zixie</string>
 
 
@@ -15,14 +15,11 @@
 
     <string name="login">登录</string>
 
-    
+
     <string name="version_update">版本更新</string>
     <string name="dialog_apk_update">发现新版本：</string>
     <string name="dialog_apk_version">版本号</string>
     <string name="dialog_apk_updating">版本（ %1$s ）更新中...</string>
     <string name="dialog_apk_updateinfo">版本内容：</string>
-
-    <string name="agreement_title">《用户协议》和</string>
-    <string name="privacy_title">《隐私协议》</string>
 
 </resources>
