--- a/CommonTest/src/main/res/layout/card_test_item.xml
+++ b/CommonTest/src/main/res/layout/card_test_item.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:text=""
+            android:textColor="@color/black"
         android:textSize="14dp" />
 
     <View
