--- a/LibDialog/src/main/res/layout/com_bihe0832_commonm_dialog_layout.xml
+++ b/LibDialog/src/main/res/layout/com_bihe0832_commonm_dialog_layout.xml
@@ -120,7 +120,7 @@
                 android:paddingTop="16dp"
                 android:paddingBottom="16dp"
                 android:layout_weight="1"
-                android:background="@null"
+                android:background="@color/dialog_bg"
                 android:gravity="center"
                 android:singleLine="true"
                 tools:text="前往"
@@ -142,7 +142,7 @@
                 android:layout_weight="1"
                 android:paddingTop="16dp"
                 android:paddingBottom="16dp"
-                android:background="@null"
+                android:background="@color/dialog_bg"
                 android:gravity="center"
                 android:singleLine="true"
                 android:textStyle="bold"
